--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#6EE76E" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="College Hub - Your campus marketplace and lost & found platform. Buy, sell, lend, and find lost items within your college community."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>College Hub - Campus Marketplace & Lost & Found</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
